--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -77,7 +77,7 @@
              <tr>
                  <td>3</td>
                  <td></td>
-                 <td>Date of filing the return:-</td>
+                 <td>Date of filing the return/order:-</td>
                  <td>
                      <div class="input-group date form_datetime HLV_clacInput"
                           data-date="" data-date-format="dd M yyyy" data-link-field="ITReturnDetailsObject_ITReturnFillingDate"
@@ -88,7 +88,7 @@
                                 : string.Empty
                              , new
                              {
-                                 @class = "form-control",
+                                 @class = "numericOnly",
                                  @size = "16",
                                  @value = ""
                              })
@@ -103,7 +103,7 @@
              <tr>
                  <td>4</td>
                  <td></td>
-                 <td>Due date of filing the return:-</td>
+                 <td>Due date of filing the return/order:-</td>
                  <td>
                      <div class="input-group date form_datetime HLV_clacInput"
                           data-date="" data-date-format="dd M yyyy" data-link-field="ITReturnDetailsObject_ITReturnDueDate"
@@ -114,7 +114,7 @@
                             : string.Empty
                          , new
                          {
-                             @class = "form-control",
+                             @class = "numericOnly",
                              @size = "16",
                              @value = ""
                          })
@@ -134,7 +134,7 @@
                      <div class="row col-12">
                          @Html.TextBoxFor(m => m.ITReturnDetailsObject.IncomefromSalary
                             , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomefromSalary)
-                            , new { @class = "form-control form-control-sm numericOnly" })
+                            , new { @class = "numericOnly" })
 
                          @if (Model.ITReturnDetailsObject.Id >0
                              && Model.ITHeadMasterList["IncomefromSalary"].CanAddDocuments)
@@ -160,7 +160,7 @@
                      <div class="row col-12">
                          @Html.TextBoxFor(m => m.ITReturnDetailsObject.HousePropIncome
                             , string.Format("{0:f}", Model.ITReturnDetailsObject.HousePropIncome)
-                            , new { @class = "form-control form-control-sm numericOnly" })
+                            , new { @class = "numericOnly" })
                          @if (Model.ITReturnDetailsObject.Id > 0
                              && Model.ITHeadMasterList["HousePropIncome"].CanAddDocuments)
                          {
