--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
@@ -45,7 +45,8 @@
         {
             @Html.Partial("ITReturnDetailsListItem"
             , new ITReturnDetailsListItemModel(Model.ITHeadMasterList[itemWithAmount]
-            , Model.ITReturnDetailsListObject))
+            , Model.ITReturnDetailsListObject
+            , Model.ITHeadMasterList))
         }        
     </tbody>
 </table>
