--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetCompanyList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetCompanyList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model  LSWebApp.Models.CompanyList
 @{
     ViewBag.Title = "GetCompanyList";
-    //Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
+    Layout = "~/Views/Shared/_LayoutDynemicMenu.cshtml";
 }
 <style>
     table, th, td {
@@ -19,26 +19,24 @@
         @Html.HiddenFor(m => m.UserId, Model.UserId)
         <table class="table table-hover">
             <thead>
-            <th>Company Name</th>
-            <th>PAN Number</th>
-            <th colspan="2"></th>
+                <th>Company Name</th>
+                <th>PAN Number</th>
             </thead>
 
             @foreach (var company in Model.Companies)
             {
-            <tr class="table-active">
-                <td>
-                    @Html.HiddenFor(m => company.Id, company.Id)
-                    @company.CompanyName
-                </td>
-                <td>@company.PANNumber</td>
-                <td>
-                    @Html.ActionLink("Get Existing IT Return Details", "ExistingITReturnDetails", "TaxReturn", new { AddedBy = Model.UserId, CompanyID = company.Id, CompanyName = company.CompanyName }, null)
-                </td>
-                <td>
-                    @Html.ActionLink("Create IT Return Details", "GetITReturnDetails", "TaxReturn", new { userId = Model.UserId, companyId = company.Id, companyname = company.CompanyName, FYAYID=0, itreturnid=0 }, null)
-                </td>
-            </tr>
+                <tr class="table-active">
+                    <td>
+                        @Html.HiddenFor(m => company.Id, company.Id)
+                        @Html.ActionLink(@company.CompanyName
+                            , "CompanyDashboard"
+                            , "TaxReturn"
+                            , new { companyId = company.Id }
+                            , null)
+                        
+                    </td>
+                    <td>@company.PANNumber</td>
+                </tr>
             }
         </table>
     }
