--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
@@ -20,7 +20,14 @@
             @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
                 {
                 <th align="center">
-                    @Html.ActionLink(@itsectiondetail.ITSectionDescription, "GetITReturnDetails", "TaxReturn", new { AddedBy = itsectiondetail.AddedBy, CompanyID = Model.CompanyId, CompanyName = @itsectiondetail.CompanyName, FYAYID = Model.FYAYId, itsectionid = @itsectiondetail.ITSectionID, itreturnid = @itsectiondetail.Id,itsectioncategoryid = @itsectiondetail.ITSectionCategoryID }, null)
+                    @Html.ActionLink(@itsectiondetail.ITSectionDescription
+                        , "GetITReturnDetails", "TaxReturn"
+                        , new {
+                            AddedBy = itsectiondetail.AddedBy,
+                            FYAYID = Model.FYAYId,
+                            itsectionid = @itsectiondetail.ITSectionID,
+                            itreturnid = @itsectiondetail.Id,
+                            itsectioncategoryid = @itsectiondetail.ITSectionCategoryID }, null)
                 </th>
                 }
         </tr>
