committing webapi changes of StandardData

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -88,7 +88,7 @@
                                 : string.Empty
                              , new
                              {
-                                 @class = "numericOnly",
+                                 @class = "form-control",
                                  @size = "16",
                                  @value = ""
                              })
@@ -114,7 +114,7 @@
                             : string.Empty
                          , new
                          {
-                             @class = "numericOnly",
+                             @class = "form-control",
                              @size = "16",
                              @value = ""
                          })
