Added comments feature in litigation and simulation screen

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
@@ -54,7 +54,7 @@
             @Html.Partial("ITReturnDetailsListItem"
             , new ITReturnDetailsListItemModel(Model.ITHeadMasterList[itemWithAmount]
             , Model.ITReturnDetailsListObject
-            , Model.ITHeadMasterList, null))
+            , Model.ITHeadMasterList))
         }        
     </tbody>
 </table>
